--- a/src/styles/common/common__manufactured/common__manufactured.css
+++ b/src/styles/common/common__manufactured/common__manufactured.css
@@ -73,6 +73,7 @@
 @media screen and (max-width: 1024px) {
     .common__manufactured-btn {
         padding: unset;
+        display: flex;
     }
 }
 
