--- a/src/styles/about/about.css
+++ b/src/styles/about/about.css
@@ -34,7 +34,8 @@
     .about__only-text {
         font-size: 18px;
         max-width: 760px;
-        margin: 170px 0 90px 0;
+        margin: 170px auto 90px;
+        text-align: center;
     }
 }
 
@@ -69,11 +70,15 @@
     max-width: 710px;
     align-self: flex-end;
     margin-bottom: 60px;
+    margin-left: 20px;
 }
 
 @media screen and (max-width: 1024px) {
     .about__wrap-desc {
         margin-bottom: 0;
+        margin-left: 0;
+        max-width: unset;
+        align-self: flex-start;
     }
 }
 
